Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.0.0.2015
----------
- Improvements to universal date parsing to fix some mis-parsed article dates.
- Fixed OPML format in exported subscriptions to conform to the standard.

2.0.0.2014
----------
- Fix "Folder NOT xxx" implementation which wasn't working right for group folders.
- Cmd+W closes the Download, Preference or Activity windows even when they are active.
- $FeedDescription$ added as a tag for styles. This expands to the feed description if available.
- Fixed bug where AppleScript 'current article' on an article in a group returns a null reference.
- Search field now also searches in titles.
- Confirmation prompt added before emptying the trash folder.
- Download window now allows double-click to open a downloaded file.
- Added popup menu to download window.

2.0.0.2013
----------
- Resort the folder list when a folder is renamed.
- Cmd-click on a link in the web view opens the link in a new tab.
- Download SITX files as SITX files even if the server returns a MIME type of text.

2.0.0.2012
----------
- Fix bug which prevented a system from going to sleep if automatic refreshes are enabled.
- Stepping through article lists does not refresh the article pane until the steps complete.
- Completed all localisation fixes.
- Auto-expire now runs post-refresh in addition to at start up.
- Vienna now checks that it can create the database in the users home folder and prompts
  for an alternative location if not.
- Don't scroll the current article after a refresh if it hasn't been changed or expired.

2.0.0.2011
----------
- Added option to export subscriptions with groups or as a flat file.
- Refresh when the system awakes from sleep if the refresh frequency is not set to manual.
- Added German Localisation. (Thanks to Jan Kampling).